# CheatPilot

./: .env.example  .gitignore  AGENT.md  CheatPilot.md  README.md  generate_report.py  pyproject.toml  信息技术实践与拓展-最终报告-22组-CheatPilot.docx
cheatpilot/: __init__.py  __main__.py  agent.py  api.py  config.py  errors.py  factory.py  formatter.py  mcp_client.py  models.py  planner.py  tool_agent.py  ui.py
cheatpilot/executors/: __init__.py  base.py  ce_mcp.py  composite.py  local_tools.py
runtime/ce_mcp/: ce_mcp_bridge.lua  mcp_cheatengine.py
scripts/: bootstrap_ce_mcp.py  cheatpilot_pvz.ps1  check_llm_tooluse.py  check_mcp.py  install_ce_autoload.ps1  start_api.ps1  start_ui.ps1
tests/: test_agent.py  test_api.py  test_cli.py  test_errors.py  test_factory.py  test_planner.py  test_tool_agent.py
